Push current changes

--- a/MVCInterProject/Views/Home/EditShipping.cshtml
+++ b/MVCInterProject/Views/Home/EditShipping.cshtml
@@ -1,5 +1,11 @@
 ﻿@model MVCInterProject.Models.Shipping
 
+<style>
+    body {
+	    background-color: #7D8CC4;
+    }
+</style>
+
 @{
     ViewData["Title"] = "EditShipping";
 }
