--- a/MVCInterProject/Views/Packages/CreateOrEdit.cshtml
+++ b/MVCInterProject/Views/Packages/CreateOrEdit.cshtml
@@ -1,5 +1,11 @@
 ﻿@model MVCInterProject.Models.Package
 
+<style>
+    body {
+	    background-color: #7D8CC4;
+    }
+</style>
+
 @{
     ViewData["Title"] = "Package Manager";
     //IEnumerable<Shipping> shippings = (ViewData["Shippings"] == null)? new List<Shipping>() : ViewData["Shippings"] as IEnumerable<Shipping>;
