--- a/MVCInterProject/Views/Home/Index.cshtml
+++ b/MVCInterProject/Views/Home/Index.cshtml
@@ -1,8 +1,40 @@
-﻿@{
+﻿@model MVCInterProject.Models.Person
+
+<style>
+    body {
+	    background-color: #7D8CC4;
+    }
+
+    .middle {
+        margin-left: 500px;
+        margin-right: 500px;
+    }
+</style>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    Register
+    <div class="middle">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="PerId"/>
+            <input type="hidden" asp-for="PerIsAdmin" value="false"/>
+            <div class="form-group">
+                <label asp-for="PerName" class="control-label"></label>
+                <input asp-for="PerName" class="form-control" />
+                <span asp-validation-for="PerName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PerPassword" class="control-label"></label>
+                <input asp-for="PerPassword" class="form-control" />
+                <span asp-validation-for="PerPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
