--- a/MVCInterProject/Views/Home/Storage.cshtml
+++ b/MVCInterProject/Views/Home/Storage.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<MVCInterProject.Models.Package>
 
+<style>
+    body {
+	    background-color: #7D8CC4;
+    }
+</style>
+
 @{
     ViewData["Title"] = "Storage";
     var dbContext = new AW_TestContext();
