--- a/MVCInterProject/Views/Packages/Delete.cshtml
+++ b/MVCInterProject/Views/Packages/Delete.cshtml
@@ -1,5 +1,11 @@
 ﻿@model MVCInterProject.Models.Package
 
+<style>
+    body {
+	    background-color: #7D8CC4;
+    }
+</style>
+
 @{
     ViewData["Title"] = "Delete";
 }
