--- a/MVCInterProject/Views/Shared/_Layout.cshtml
+++ b/MVCInterProject/Views/Shared/_Layout.cshtml
@@ -1,16 +1,27 @@
-﻿<!DOCTYPE html>
+﻿<style>
+    .ChangeColors{
+        background-color: blueviolet;
+    }
+
+    body {
+	    background-color: #7D8CC4;
+        color: #2F3432;
+    }
+</style>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MVCInterProject</title>
+    <title>@ViewData["Title"] - WWW Project</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MVCInterProject.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MVCInterProject</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,13 +31,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Register</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Packages" asp-action="Index">Storage</a>
                         </li>
                     </ul>
                 </div>
+            </div>
+            <div class="nav-item">
+                <button class="ChangeColors">ChangeColors</button>
             </div>
         </nav>
     </header>
@@ -47,3 +64,23 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+
+<script>
+    var acc = document.getElementsByClassName("ChangeColors");
+    var bul = false;
+    acc[0].addEventListener("click", function() {
+        console.log(document.getElementsByTagName('body')[0].style.background);
+        if (bul) {
+            document.getElementsByTagName('body')[0].style.background = '#7D8CC4';
+            document.getElementsByTagName('body')[0].style.color = '#2F3432';
+            bul = false;
+        }
+        else {
+            document.getElementsByTagName('body')[0].style.background = '#8F3432';
+            document.getElementsByTagName('body')[0].style.color = '#7D8CC4';
+            bul = true;
+        }
+        console.log("mogu");
+    }); 
+</script>
